2002-07-18  Zoran Vasiljevic <zoran@archiware.com>  

	* threadCmd.c: modified thread::release to allow
	for optional "-wait" argument. This will result in 
	the thread waiting until the target thread has really
	exited. Otherwise, the command exits immediately and 
	target thread may exit asynchronously some time later.
 	This is not techically needed since one can always join
	the exiting thread, but the join command is not 
	available for some older Tcl versions. 

2002-07-13  Zoran Vasiljevic <zoran@archiware.com>  

	* doc/man:
	* doc/html: added two directories with TMML generated files
	* doc/thread.tmml: fixed for the final 2.4 release
	* Makefile.in: updated install-doc target to look for man files
	under doc/man instead only under doc directory

2002-07-12  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadSvCmd.s: fixed handling of string rep
	in shared var object duplicator

2002-07-09  Zoran Vasiljevic <zoran@archiware.com>  
	* README: added this file
 	* license.terms: added this file

2002-07-05  Zoran Vasiljevic <zoran@archiware.com>  

        * tclconfig/tcl.m4: fixed reference to MINGW so we can
	compile w/o MSVC under windows. 

2002-07-03  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadSvCmd.c: simplified object duplicator

2002-06-17  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: cleanup of some unused variables
	* generic/threadSvCmd.c:
	* generic/ThreadSpCmd.c:
	* generic/threadSvList.c: added CONST qualifiers to avoid warnings
	when compiling against 8.4 core. 

2002-05-25  Zoran Vasiljevic <zoran@archiware.com>  
	* generic/threadCmd.c: added some typecasts to satisfy Windows 
	* generic/threadSvCmd.h: added some typecasts to satisfy Windows 

2002-05-04  Zoran Vasiljevic <zoran@archiware.com>  
	* generic/threadSvCmd.c: removed errant reference to (still not)
	supported shared dictionary and shared keylist datatypes.

2002-04-27  Zoran Vasiljevic <zoran@archiware.com>  
